# foxengine

./: CMakeLists.txt
res/: data.json
res/scenes/: default.scene.json
res/shaders/: default.frag  default.vert
src/: base.h  main.cpp  standard.h  types.h
src/config/: engine_config.cpp  engine_config.h
src/ecs/: color.h  color_component.h  component.h  texture_component.h  transform.h  transform_component.h  world.cpp  world.h
src/math/: color.cpp  color.h  mat3.cpp  mat3.h  v2.cpp  v2.h  v3.cpp  v3.h
src/parser/: config.cpp  config.h
src/rendering/: renderer.cpp  renderer.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/resources/: loader.cpp  loader.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
src/runtime/: main.cpp
src/utils/: file.cpp  file.h  timing.cpp  timing.h  types.h
src/window/: window.cpp  window.h
